--- a/public/main.html
+++ b/public/main.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 
 </head>
 <body>
     <main class="container ">
-         <h1>PCPRO componentes y baterias  </h1>
+         <p>PCPRO componentes y baterias  </p>
     <img src="./img/RTR2QKGR-1.jpg" alt="fondo">
 
         <form action="/products/createProduct" method="post">
@@ -31,7 +32,5 @@
             </div>
         </form>
     </main>
-   
-    
 </body>
 </html>
